src/test/deca/context/valid/testCast.deca
class A{
}

{
	
   A a = new A();
   A b = new A();
   a = (A) (b);
}
