src/test/deca/context/invalid/tests/signMethodCall.deca
class A{
  void f(A a){
  }
}
 class B extends A{
}

{
  A a = new A();
  B b = new B();
  a.f(b);
}
